--- a/war/LibraryLocator.html
+++ b/war/LibraryLocator.html
@@ -62,6 +62,8 @@
     </noscript>
 
     <h1>iStudy</h1>
+           <div id="SocialPanel" style="width=100%;height=100%; float:left;"> </div>
+    
        <div id="libraryLocator"></div>       
        
 
