pulling ro's new version

--- a/war/LibraryLocator.html
+++ b/war/LibraryLocator.html
@@ -90,13 +90,25 @@
       </div>
     </noscript>
     
-<div id="container" style="height:auto; width:460px;  background: #fff;
+ <div id="admincontainer" style="height:auto; width:auto;  background: #fff;
+left:0px;
+top:0px; z-index:100;
+margin: 60px auto 0;
+  padding: 10px;
+">
+<div id="mainAdminTab" style="left:-300px; top: -40px; z-index:100;" ></div>
+</div>
+
+
+<div id="container" style="height:300px; width:460px;  background: #fff;
 left:-330px;
-top:-40px; 
+top:-40px; z-index:1;
 
 margin: 60px auto 0;
   padding: 10px;
 ">
+
+
 <!--       <h1 style="float: left;">Map</h1>
  -->   
 <div id="libraryLocator" ></div>
@@ -135,13 +147,11 @@ Copyright © Paopao.com
   <div id="map" style="height:100%;
   position: absolute; 
   top: 0; 
-  bottom: -200px; 
+  bottom: 0px; 
   left: 0; 
   right: 0; 
   z-index: 0;"></div>
-  
-
-
+ 
 <!--     <table align="center"> -->
 <!--       <tr> -->
 <!--         <td colspan="2" style="font-weight:bold;">Please enter your name:</td>         -->
