--- a/war/LibraryLocator.html
+++ b/war/LibraryLocator.html
@@ -89,21 +89,11 @@
         in order for this application to display correctly.
       </div>
     </noscript>
-    
- <div id="admincontainer" style="height:auto; width:auto;  background: #fff;
-left:0px;
-top:0px; z-index:100;
-margin: 60px auto 0;
-  padding: 10px;
-">
-<div id="mainAdminTab" style="left:-300px; top: -40px; z-index:100;" ></div>
-</div>
-
-
-<div id="container" style="height:300px; width:460px;  background: #fff;
-left:-330px;
+   
+<div id="container" style="height:auto; width:450px;  background: #fff;
+left:-370px;
 top:-40px; z-index:1;
-
+outline: 5px solid #E7F3FF;
 margin: 60px auto 0;
   padding: 10px;
 ">
@@ -112,7 +102,8 @@ margin: 60px auto 0;
 <!--       <h1 style="float: left;">Map</h1>
  -->   
 <div id="libraryLocator" ></div>
-
+  <div id="dialogboxAdmin" style=" z-index:3;  padding: 10px;
+  " ></div>
 <section id="extras">
 	<div class="social" >
 		<h2>social</h2>
@@ -137,20 +128,20 @@ margin: 60px auto 0;
 
 </footer>
 <!-- /#contentinfo -->
-
-
-
 Copyright © Paopao.com
 
  </div>
  
   <div id="map" style="height:100%;
+  width:100%;
   position: absolute; 
   top: 0; 
   bottom: 0px; 
   left: 0; 
   right: 0; 
   z-index: 0;"></div>
+  
+  
  
 <!--     <table align="center"> -->
 <!--       <tr> -->
@@ -164,7 +155,6 @@ Copyright © Paopao.com
 <!--         <td colspan="2" style="color:red;" id="errorLabelContainer"></td> -->
 <!--       </tr> -->
 <!--     </table> -->
-
 
 
   </body>
