implement add favorite

--- a/war/LibraryLocator.html
+++ b/war/LibraryLocator.html
@@ -10,36 +10,6 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <style type="text/css">
 
-/* #map{
-   position: relative;
-   
-    left: 150px;
-    top: 420px;  
-    z-index:3
-    }   */
-/*  
-    #libraryLocator{
-    height:50px;
-    width:50px;
-    float:left;
-    padding:5px; 
-    z-index: 0;
-    }  
-     */
-/*
-    #mainAdminTab {
-    position: absolute;
-    left: 0px;
-    top: 250px;
-    z-index: 1;
-    }
-    #SocialPanel {
-     position: absolute;
-    left: 600px;
-    top: 650px;
-    z-index: 1;
-    } */
-}
 </style>
 
 <!--                                                               -->
@@ -76,7 +46,7 @@
 
 <body>
 
-	<div id="Header" style = "background: #000000; padding: auto; position:relative; z-index: 1;"></div>
+	<div id="Header" style = "background: #000000; padding: auto; position:relative; z-index: 1; text-align: right;"></div>
 
 	<!-- OPTIONAL: include this if you want history support -->
 	<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1'
@@ -96,8 +66,7 @@
 		style="height: auto; width: 450px; background: #fff; left: -370px; top: -40px; z-index: 1; outline: 5px solid #E7F3FF; margin: 60px auto 0; padding: 10px;">
 
 
-		<!--       <h1 style="float: left;">Map</h1>
- -->
+		<!--       <h1 style="float: left;">Map</h1>        -->
 
 		<div id="libraryLocator"></div>
 		<div id="dialogboxAdmin" style="z-index: 3; padding: 10px;"></div>
@@ -107,8 +76,7 @@
 				<ul>
 					<li><a href="http://www.twitter.com" rel="me">Twitter</a></li>
 					<li><a href="http://www.facebook.com" rel="me">Facebook</a></li>
-					<!-- 			<li><a href="http://www.google.com" rel="me">Google</a></li>
- -->
+					<!-- 			<li><a href="http://www.google.com" rel="me">Google</a></li>     -->
 				</ul>
 			</div>
 
