--- a/war/LibraryLocator.html
+++ b/war/LibraryLocator.html
@@ -62,6 +62,27 @@
 	src="http://maps.googleapis.com/maps/api/js?sensor=SENSOR_TRUE_OR_FALSE"></script>
 <script type="text/javascript" language="javascript"
 	src="librarylocator/librarylocator.nocache.js"></script>
+	
+	<script>
+	function hideadmin(){
+	document.getElementById("admin").style.visibility="hidden";
+	}
+
+var toggle = function() {
+  var mydiv = document.getElementById('libraryLocator');
+    var mydiv2 = document.getElementById('contentinfo');
+  
+  if (mydiv.style.display === 'block' || mydiv.style.display === '')
+    mydiv.style.display = 'none';
+  else
+    mydiv.style.display = 'block'
+    
+    if (mydiv2.style.display === 'block' || mydiv2.style.display === '')
+    mydiv2.style.display = 'none';
+  else
+    mydiv2.style.display = 'block'
+  }
+</script>
 
 </head>
 <!--           <div id="SocialPanel" style="width:100%; height:100%; float:right;"></div>  
@@ -76,6 +97,9 @@
 <!--                                           -->
 
 <body>
+
+
+
 	<!-- OPTIONAL: include this if you want history support -->
 	<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1'
 		style="position: absolute; width: 0; height: 0; border: 0"></iframe>
@@ -88,32 +112,42 @@
 			Your web browser must have JavaScript enabled in order for this
 			application to display correctly.</div>
 	</noscript>
+	
+	<header id="banner" style="z-index:0; position:relative;"> 
+	<nav><ul>
+		<li class="active"><a href="#">Map</a></li>
+		<li><a href="#">Login</a></li>
+		<li><a  id="admin" onclick="hideadmin()" href="#">Admin</a></li>
+	</ul></nav>
+	
+ 
+</header><!-- /#banner -->
 
 
 	<div id="container"
-		style="height: auto; width: 450px; background: #fff; left: -370px; top: -40px; z-index: 1; outline: 5px solid #E7F3FF; margin: 60px auto 0; padding: 10px;">
+		style="height: auto; width: 450px; background:#fff ; left: 10px; top: 0px ; z-index: 0;position:absolute; outline: 5px solid #E7F3FF; margin: 60px auto 0; padding: 10px;float:left;">
 		<div id="libraryLocator"></div>
-		<div id="dialogboxAdmin" style="z-index: 3; padding: 10px;"></div>
 
 		<!-- /#extras -->
-		<footer id="contentinfo">
+	 	<footer id="contentinfo">
 			<address id="about" class="vcard body">
-				<!-- /.primary -->
-				<span class="bio" style="float: left;">iStudy LibraryLocator
-					is a website that offers BC library-searching service to the
-					public. It was founded by Paopao.</span>
+				
+				<span class="bio" >Please double click the marker on the map for more info about the libraries
+					</span>
 
 			</address>
-			<!-- /#about -->
 
-		</footer>
+
+		</footer> 
+				<input type='button'  value='hide/show' onclick="toggle();"></input>
+		
+		<div id="Header" ></div>
 		<!-- /#contentinfo -->
 		Copyright © Paopao.com
 
 	</div>
-
 	<div id="map"
-		style="height: 100%; width: 100%; position: absolute; top: 0; bottom: 0px; left: 0; right: 0; z-index: 0;"></div>
+		style="height: 100%; width: 100%; position: absolute; top: 0; bottom: 0px; left: 0; right: 0; z-index: -1;"></div>
 
 
 
@@ -129,19 +163,25 @@
 	<!--         <td colspan="2" style="color:red;" id="errorLabelContainer"></td> -->
 	<!--       </tr> -->
 	<!--     </table> -->
+	
 
-	<section id="extras"  style="z-index:100; position:relative;left:0px; top:150px;">
+	<section id="extras"  style="z-index:0; position:absolute;float:bottom;   left:0px; top:500px; ">
 			<div class="social">
 				<h2>Share</h2>
 				<ul>
 					<li><a href="http://www.twitter.com" rel="me">Twitter</a></li>
-					<li><a href="https://developers.facebook.com/docs/plugins/" rel="me">Facebook</a></li>
+					<li><a onclick="facebook()" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2F1-dot-ixxuul3.appspot.com%2F2012%2F12%2Fooooooooo%2F&t=xxxxxx" rel="me">Facebook</a></li>
 					<!-- 			<li><a href="http://www.google.com" rel="me">Google</a></li>
  -->
 				</ul>
 			</div>
 			<!-- /.social -->
 		</section>
+		
+		<!-- <form action="${pageContext.request.contextPath}/myservlet" method="post">
+    <input type="submit" name="button1" value="Button 1" style="z-index=1; position:absolute;"/> -->
+		<div id="dialogboxAdmin" style="z-index: 3; padding: 10px;position: absolute; left:/*180*/280px;top:-10px;"></div>
+
 
 </body>
 
