--- a/war/LibraryLocator.html
+++ b/war/LibraryLocator.html
@@ -184,6 +184,7 @@ var toggle = function() {
 		<!-- <form action="${pageContext.request.contextPath}/myservlet" method="post">
     <input type="submit" name="button1" value="Button 1" style="z-index=1; position:absolute;"/> -->
 		<div id="dialogboxAdmin" style="z-index: 3; padding: 10px;position: absolute; left:/*180*/280px;top:-10px;"></div>
+		<div id="login" style="z-index: 5; padding: 10px;position: absolute; left:/*180*/480px;top:-10px;"></div>
 
 
 </body>
