--- a/war/LibraryLocator.html
+++ b/war/LibraryLocator.html
@@ -74,9 +74,7 @@
 	src="librarylocator/librarylocator.nocache.js"></script>
 
 <script>
-	function hideadmin(){
-	document.getElementById("admin").style.visibility="hidden";
-	}
+
 
 var toggle = function() {
   var mydiv = document.getElementById('libraryLocator');
@@ -158,7 +156,7 @@ var toggle = function() {
 <div id="container"
 		style="height: auto; width: 430px; background:#fff ;z-index:0; left: 10px; top: -10px; position:absolute;  margin: 60px auto 0; /* border:#000000 */; padding: 15px;float:left;">
 		<div id="libraryLocator" style="width:auto;"></div>
-		<input type='button'  class="pure-button pure-button-primary" value='HIDE/SHOW'  onclick="toggle();" style="background: #f5e8be;"></input>
+		<input type='button' value='HIDE/SHOW'  onclick="toggle();"></input>
 
 	</div>
 	
