--- a/war/LibraryLocator.html
+++ b/war/LibraryLocator.html
@@ -82,6 +82,7 @@ var toggle = function() {
   
   if (mydiv.style.display === 'block' || mydiv.style.display === '')
     mydiv.style.display = 'none';
+    }
   else
     mydiv.style.display = 'block'
     
@@ -157,7 +158,7 @@ var toggle = function() {
 <div id="container"
 		style="height: auto; width: 430px; background:#fff ;z-index:0; left: 10px; top: -10px; position:absolute;  margin: 60px auto 0; /* border:#000000 */; padding: 15px;float:left;">
 		<div id="libraryLocator" style="width:auto;"></div>
-		<input type='button' value='HIDE/SHOW'  onclick="toggle();" style="font-size: 70%;"></input>
+		<input type='button' value='HIDE'  onclick="toggle();" style="font-size: 70%;"></input>
 
 	</div>
 	
