--- a/war/LibraryLocator.html
+++ b/war/LibraryLocator.html
@@ -4,7 +4,7 @@
 <!-- "Standards Mode". Replacing this declaration   -->
 <!-- with a "Quirks Mode" doctype is not supported. -->
 
-<html>
+<html xmlns:wb="http://open.weibo.com/wb">
 <head>
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -57,6 +57,8 @@
 <!-- be added before this line.                -->
 <!--                                           -->
 
+<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js"
+	type="text/javascript" charset="utf-8"></script>
 
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -153,14 +155,20 @@ var toggle = function() {
 				<li><a href="#loginpanel" onclick="showlogin()">Login</a></li>
 				<li><a href="#adminpanel" onclick="showdialogboxAdmin()">Admin</a></li>
 			</ul>
-			<div style="position: absolute; right: 0px; top: 4px; z-index: 2;">
-				<object>
-					<a class="twitter-share-button" href="https://twitter.com/share">
+			<div style="position: absolute; right: 10px; top: 0px; z-index: 2;">
+				<object style="top: 20px;">
+					<wb:share-button addition="simple" type="button"
+						default_text="from LibraryLocator LOL"></wb:share-button>
+				</object>
+				<object style="top: 20px;">
+					<a class="twitter-share-button" href="https://twitter.com/share"
+						data-related="twitterdev" data-size="medium" data-count="none"
+						data-text="Checking out this page about the Tweet Button">
 						Tweet</a>
 				</object>
 				<object class="fb-like" href="http://gacktc.appspot.com/"
-					data-layout="standard" data-action="like" data-share="true"
-					style="left: -20px; top: -5px;"> </object>
+					data-layout="button_count" data-action="like" data-share="true"
+					style="top: -6px;"> </object>
 			</div>
 		</nav>
 	</header>
@@ -176,7 +184,7 @@ var toggle = function() {
 	</div>
 
 	<div id="dialogboxAdmin"
-	style="z-index: 3; padding: 15px; position: absolute; left: 10px; top: 45px; background: #fff; visibility: hidden;"></div>
+		style="z-index: 3; padding: 15px; position: absolute; left: 10px; top: 45px; background: #fff; visibility: hidden;"></div>
 
 
 	<div id="map"
