--- a/war/LibraryLocator.html
+++ b/war/LibraryLocator.html
@@ -156,14 +156,14 @@ var toggle = function() {
 				<li><a href="#adminpanel" onclick="showdialogboxAdmin()">Admin</a></li>
 			</ul>
 			<div style="position: absolute; right: 10px; top: 0px; z-index: 2;">
-				<object style="top: 20px;">
+				<object style="top: 50px;">
 					<wb:share-button addition="simple" type="button"
 						default_text="from LibraryLocator LOL"></wb:share-button>
 				</object>
 				<object style="top: 20px;">
 					<a class="twitter-share-button" href="https://twitter.com/share"
 						data-related="twitterdev" data-size="medium" data-count="none"
-						data-text="Checking out this page about the Tweet Button">
+						data-text="I like iStudy LibraryLocator! I AM A BIG NERD =)">
 						Tweet</a>
 				</object>
 				<object class="fb-like" href="http://gacktc.appspot.com/"
