--- a/war/LibraryLocator.html
+++ b/war/LibraryLocator.html
@@ -163,10 +163,10 @@ var toggle = function() {
 				<object style="top: 20px;">
 					<a class="twitter-share-button" href="https://twitter.com/share"
 						data-related="twitterdev" data-size="medium" data-count="none"
-						data-text="I like iStudy LibraryLocator! I AM A BIG NERD =)">
+						data-text="I like iStudy LibraryLocator!">
 						Tweet</a>
 				</object>
-				<object class="fb-like" href="http://gacktc.appspot.com/"
+				<object class="fb-like" href="http://2-dot-paopaosistudy.appspot.com/"
 					data-layout="button_count" data-action="like" data-share="true"
 					style="top: -6px;"> </object>
 			</div>
