--- a/war/LibraryLocator.html
+++ b/war/LibraryLocator.html
@@ -166,7 +166,7 @@ var toggle = function() {
 						data-text="I like iStudy LibraryLocator!">
 						Tweet</a>
 				</object>
-				<object class="fb-like" href="http://ro-roskiy.appspot.com/"
+				<object class="fb-like" href="http://2-dot-paopaosistudy.appspot.com/"
 					data-layout="button_count" data-action="like" data-share="true"
 					style="top: -6px;"> </object>
 			</div>
